  Was experiencing deadlock on a multicore box due to the single woken 
  thread waiting on something else and no other threads being awoken.
- fork() now copies script environment from parent env and creates fresh 
  copies of all named closures.  This prevents unsynchronized saved state and
  closure scope variables from leaking into the forked environment.  

2.1-release (25 Sept 08) [update 3]
===========
- fixed a problem with setField not accessing fields declared in a parent
  class for an object.
- [$obj field] can now get protected members declared within the parent of
  $obj.  This does not extend to protected members declared up the class 
  hierarchy.
- added exponent operator as an assignment op i.e. $x **= 2; 
- fixed a bug with cast preventing the creation of empty arrays.
- ordered hash now makes a copy of value returned by miss policy.  This
  prevents a situation where all members of a hash share reference to same
  default value (and are thus changeable in place).
- ohash now longer serializes miss and removal policies.  be warned when
  you deserialize these hashes you'll want to readd the policy functions

  [previous behavior resulted in a null error and corrupted the Sleep
  stack, so if this affected you, you already knew and weren't happy with
  with it].
- proxy instances now have a more detailed string representation.  also the
  string description of a proxy instance no longer calls the underlying
  closure requesting toString.
- rewrote <=> to return solely 1, 0, or -1 depending on how values compare.
  this replaces the old method which subtracted the left value from the right
  one.  avoids issues with overflowed bits this way.

2.1-release  (7 Aug 08) [update 2.5]
===========
- made a sanity check with inline function execution to keep jIRCii
  compatability
- fixed &sublist only front elements of read-only arrays. (another
  find from the jIRCii scripting community)

2.1-release  (5 Aug 08) [update 2]
===========